Update AproxControler to use new HttpClient